2001-03-28  Andrew Cagney  <ac131313@redhat.com>

	* config/pa/xm-hppah.h (malloc): Really delete declaration
	(MALLOC_INCOMPATIBLE): Really delete macro.
	* cli/cli-cmds.c (apropos_command): Use xcalloc.

2001-03-28  Andrew Cagney  <ac131313@redhat.com>

	* configure.in (build_warnings): Add -Wuninitialized.
	* configure: Regenerate.

	* v850-tdep.c (v850_scan_prologue): Initialize ``insn2''.
	* sparc-tdep.c (sparc64_push_arguments): Add default case to
	switch.
	* sh-tdep.c (sh_do_fp_register): Replace ``?:'' printf format
	expression with if statement.
	* mn10200-tdep.c (mn10200_analyze_prologue): Initialize
	``stack_size''.
	* mips-tdep.c (show_mipsfpu_command): Add default case to switch.
	(mips_dump_tdep): Fix setting of ef_mips_arch.
	* mcore-tdep.c (mcore_analyze_prologue): Initialize ``fp_regnum''.
	* dsrec.c (make_srec): Always initialize ``binbuf''.
	* monitor.c (monitor_read_memory_single): Do not pass an
	uninitialized buffer to monitor_error. Make ``i'' more local.

2001-03-28  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS: Change ns32k target to ,-Werror.

	* ns32k-tdep.c: Include "gdbcore.h"
	(flip_bytes): Change first argument to void*. Add forward
	declaration.
	(sign_extend): Add declaration.
	(merlin_frame_num_args): Add final else clause to if-else chain.
	(umax_frame_num_args): Ditto.
	* config/ns32k/tm-umax.h (ns32k_localcount): Declare.
	(flip_bytes): Ditto.

2001-03-28  Mark Kettenis  <kettenis@gnu.org>

	* i386-linux-tdep.c (FRAMELESS_SIGNAL): Moved here from
	config/i386/nm-linux.h (including comment).
	(i386_linux_frame_chain): New function implementing guts of the
	former FRAME_CHAIN macro, but using read_memory_unsigned_integer
	instead of read_memory_integer.
	(i386_linux_frame_saved_pc): Removed doc pointing to
	i386/tm-linux.h for an explanation of FRAMELESS_SIGNAL since that
	now lives in this file.
	* config/i386/tm-linux.h (FRAMELESS_SIGNAL): Moved to
	i386-linux-tdep.c (including comment).